fix: allow document to resize properly when y axis overflows

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,7 +2,7 @@
 
 html,
 body {
-  @apply m-0 h-full w-full;
+  @apply m-0 min-h-full w-full;
 }
 body {
   font-family: "JetBrains Mono", monospace;
